package NCommonServerProto;

message TTagObject {
    optional string TagData = 1;
}

message TTagDescriptionObject {
    optional string TagDescriptionData = 1;
}

message TGeoAreaId {
    optional string Type = 1;
    optional string Name = 2;
}
